--- a/client-side/package.json
+++ b/client-side/package.json
@@ -13,6 +13,7 @@
     "clsx": "^1.1.1",
     "eslint-config-leapfrog": "^3.0.0",
     "formik": "^2.1.5",
+    "material-table": "^1.69.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
