--- a/client-side/package.json
+++ b/client-side/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.1.5",
     "material-table": "^1.69.0",
     "react": "^16.13.1",
+    "react-avatar": "^3.9.7",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-redux": "^7.2.1",
